# fastapi-backend-template

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/core/entity/: aa.py
app/core/example/: example_logic.py
app/core/repo/: aa_repo.py
app/infra/api/: a_service_api.py
app/infra/repo/: mm_aa_repo.py
app/routers/: setup_router.py
app/routers/v0/: test.py
app/routers/v0/dtos/: test.py
