[tool.poetry]
name = "fastapi-backend-template"
version = "0.1.0"
description = ""
authors = ["YJack0000 <jackleagends@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
